[gd_scene load_steps=14 format=3 uid="uid://dlgoysdskf36b"]

[ext_resource type="Script" path="res://entities/bird/bird.gd" id="1_xwqfc"]
[ext_resource type="Texture2D" uid="uid://b1tmognte23sh" path="res://entities/bird/assets/bird-flap-1-12x10.png" id="2_o3mda"]
[ext_resource type="Texture2D" uid="uid://crwr77qkseoai" path="res://entities/bird/assets/bird-flap-2-12x10.png" id="3_5cmbj"]
[ext_resource type="Texture2D" uid="uid://c8sjpnikgq3cx" path="res://entities/bird/assets/bird-flap-0-12x10.png" id="4_6gfcu"]
[ext_resource type="Texture2D" uid="uid://buihpxdld8gnl" path="res://entities/bird/assets/bird-flap-1-specular-10x4.png" id="5_ldvsn"]
[ext_resource type="Texture2D" uid="uid://ehg3owdq1h3h" path="res://entities/bird/assets/bird-flap-2-specular-10x4.png" id="6_6un8g"]
[ext_resource type="Texture2D" uid="uid://brb2v8v8yda5v" path="res://entities/bird/assets/bird-flap-0-specular-10x4.png" id="7_50xjn"]
[ext_resource type="AudioStream" uid="uid://bdpxj4mjwbdm4" path="res://sounds/Bird_Flap.wav" id="8_og8e5"]
[ext_resource type="AudioStream" uid="uid://ivlghcduked3" path="res://sounds/Bird_Score.wav" id="9_q70ng"]
[ext_resource type="AudioStream" uid="uid://d1lf4v50cgtoc" path="res://sounds/Bird_Hit.wav" id="10_jpmhg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_h6lv0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_o3mda")
}, {
"duration": 1.0,
"texture": ExtResource("3_5cmbj")
}, {
"duration": 1.0,
"texture": ExtResource("4_6gfcu")
}, {
"duration": 1.0,
"texture": ExtResource("2_o3mda")
}, {
"duration": 1.0,
"texture": ExtResource("3_5cmbj")
}, {
"duration": 1.0,
"texture": ExtResource("4_6gfcu")
}],
"loop": false,
"name": &"flap",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6gfcu")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_6rmim"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ldvsn")
}, {
"duration": 1.0,
"texture": ExtResource("6_6un8g")
}, {
"duration": 1.0,
"texture": ExtResource("7_50xjn")
}, {
"duration": 1.0,
"texture": ExtResource("5_ldvsn")
}, {
"duration": 1.0,
"texture": ExtResource("6_6un8g")
}, {
"duration": 1.0,
"texture": ExtResource("7_50xjn")
}],
"loop": false,
"name": &"flap",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_50xjn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nr5o2"]
radius = 4.5

[node name="Bird" type="Area2D"]
monitorable = false
script = ExtResource("1_xwqfc")
max_velocity = 3.0
grav = 0.15
pulse = -2.5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_h6lv0")
animation = &"flap"
autoplay = "idle"
frame = 5
frame_progress = 1.0

[node name="AnimatedSprite2DSpecular" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 101)
sprite_frames = SubResource("SpriteFrames_6rmim")
animation = &"flap"
autoplay = "idle"
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nr5o2")

[node name="AudioFlap" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_og8e5")
volume_db = -10.0
max_polyphony = 3

[node name="AudioScore" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_q70ng")
volume_db = -10.0

[node name="AudioDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_jpmhg")
volume_db = -5.0

[connection signal="area_entered" from="." to="." method="_on_ground_entered"]
[connection signal="bird_collided" from="." to="." method="_on_bird_collided"]
